--- a/index.Rmd
+++ b/index.Rmd
@@ -26,7 +26,7 @@ Rolling Stone is an American magazine that focuses on popular culture in regards
 Specifically, our data is about an opinionated poll, by critical music figures, of the greatest 500 albums from 1955 to 2011, with information regarding an individual album. It's important to note that the data is constricted to just the years of **1955 to 2011**.
 
 ## Honorable Mentions
-According to Rolling Stone, the greatest album of all time was **`r sum_information$alb_1`** by _`r sum_information$art_1`_. The year with the most albums in the Top 500 was `r sum_information$most_year` while the most common artists were _`r sum_information$art_most_num`_. Recent albums have had a hard time making their way on this list. However, the most recent album to make it on to the Top 500 was **`r sum_information$most_recent`**.
+According to Rolling Stone, the greatest album of all time was **`r sum_information$alb_1`**, which was released in `r sum_information$year_1` by _`r sum_information$art_1`_. The year with the most albums in the Top 500 was `r sum_information$most_year` while the most common artists were _`r sum_information$art_most_num`_. Recent albums have had a hard time making their way on this list. However, the most recent album to make it on to the Top 500 was **`r sum_information$most_recent`**, which was released in `r sum_information$recent_year` by _`r sum_information$recent_art`_.
 
 ## Music Through the Decades
 The following chart reveals popular music trends through the decades. Specifically, we wanted to see what decade had the highest average rank and who was the most popular artist from each decade. From this table, the biggest observation is that the average rank of albums in each decade gets higher as time goes on, meaning that older albums are considered more popular than recent music. However, more albums made the Top 500 in the 1970's (186 albums), even if they were not as highly ranked as some of the other decades.
